Fix broken CSS

--- a/MS-Terrarium/style.css
+++ b/MS-Terrarium/style.css
@@ -1,49 +1,34 @@
+
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif, arial, sans-serif;
-    position:absolute;
-    height:100%;
-    width:100%;
+    min-height:100vh;
 }
 
 h1 {
 	color: #6da564;
-    display:flex;
-	justify-content: center;      
 }
 
-
-#center-container {
-    order: 2;
-}
-
-#left-container {
-    order: 1;
-}
-
-#right-container {
-    order: 3;
-}
-
-.columns{
+.columns {
     display: flex;
-    flex-direction:column;
+    position: absolute;
 }
 
 .container {
     background-color: darkcyan;
-    position:inherit;
-    width:20%;
-    height:100%;
+
 }
 
 .plant-holder {
-    position: relative;
     height: 13%;
-    left: -10px;
 }
 
 .plant {
-    position: absolute;
     max-width: 150%;
     max-height: 150%;
     z-index: 2;
@@ -92,6 +77,21 @@ h1 {
     bottom: 0%;
     left: 27.5%;
     opacity: 0.7;
+}
+
+#center-container {
+    order: 2;
+    width: 60%;
+}
+
+#left-container {
+    order: 1;
+    width: 20%;
+}
+
+#right-container {
+    order: 3;
+    width: 20%;
 }
 
 /*
